[project]
name = "momapy"
version = "0.1.0"
description = ""
authors = [
    {name = "Adrien Rougny", email = "adrienrougny@gmail.com"},
]
dependencies = [
    "frozendict>=2.3.10",
    "pycairo>=1.25.1",
    "pygobject>=3.46.0",
    "numpy>=1.26.2",
    "pyparsing>=3.1.1",
    "skia-python>=87.5",
    "xsdata[cli,lxml,soap]==23.8",
    "ipykernel>=6.27.1",
    "shapely>=2.0.2",
    "colorama>=0.4.6",
    "bezier>=2023.7.28",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.2",
    "mkdocs-material>=9.5.31",
    "griffe-fieldz>=0.1.2",
    "sphinx>=8.0.2",
]
requires-python = ">=3.10, <=3.11"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm]
